# spore-codegen-example

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  codegen.json  codegen.yml  vcpkg-configuration.json  vcpkg.json
.github/workflow/: ci.yml  pull_requests.yml
.github/workflows/: ci.yml
cmake/: FetchContent_spore_codegen.cmake
include/: codegen.hpp  header.hpp  macros.hpp  type_traits.hpp  types.hpp
src/: main.cpp
templates/: example.hpp.inja  generated.hpp.inja
